--- a/stan-overview/exercises/1.2/Ex_1_slides.Rmd
+++ b/stan-overview/exercises/1.2/Ex_1_slides.Rmd
@@ -5,6 +5,7 @@ output:
     widescreen: true
     smaller: true
 ---
+
 ## Nice Dice:  the Platonic Solids
 
 Definition of a Platonic solid from [the wikipedia](https://en.wikipedia.org/wiki/Platonic_solid):
@@ -63,11 +64,14 @@ observed in $N$ trials, where each category has a fixed success probability.
 * parameters: $N$ number of trials, $\theta$ $K$-length vector of probability of success 
 * generalization of the Binomial from 2 outcomes to $K$ outcomes
 
+
 ## Example:  the Magic 8-Ball
 
 At the heart of every true Magic 8-Ball is a 20-sided die.
-```{r, echo=FALSE, out.width = "800px"}
-knitr::include_graphics("m8ball-patent.png")
+
+```{r, echo=FALSE, out.width = "75%"}
+library(knitr)
+include_graphics("m8ball-patent.png")
 ```
 
 ## `gen_magic8.stan`
@@ -100,11 +104,12 @@ generated quantities {
   if (ans == 20) print("Very doubtful");
 }
 ```
-\pagebreak
 
-## RStan workflow for this set of exercises
+## RStan Workflow for Exercises
 
-## `stan`
+This exercise set will require use of the following RStan and R commands:
+
+### `stan`
 
 The RStan function `stan` generates a sample consisting of a set of draws given a Stan model (and data, as needed).
 
@@ -118,9 +123,10 @@ therefore, `stan` function must be invoked with `algorithm="Fixed_param"`:
 > fit_8ball = stan(file="gen_magic8.stan", algorithm="Fixed_param")
 ```
 
-## `print(<stanfit>)`
+*******************************
+### `print(<stanfit>)`
 
-The `print` provides information about the sample and the controls used to generate it.
+The `print` function provides information about the sample and the controls used to generate it.
 It prints summary statistics for parameters and quantities of interest defined in the model.
 Here, the generated quantity `ans` is the outcome of one roll of a 20-sided die:
 ```
@@ -133,7 +139,8 @@ post-warmup draws per chain=1000, total post-warmup draws=4000.
 ans  10.49    0.09 5.7    1   6  11  15    20  3794    1
 ```
 
-## `extract`, `as.array`, `as.matrix`, `as.data.frame`
+*******************************
+### `extract`, `as.array`, `as.matrix`, `as.data.frame`
 
 The convenience functions `extract`, `as.array`, `as.matrix`, `as.data.frame` retrieve
 the individual parameters and quantities of interest defined in the model as R objects.
@@ -157,13 +164,32 @@ To access the generated quantity `ans` as a single vector of 4000 outcomes, use 
 [13] 0.04625 0.05300 0.04900 0.05000 0.04625 0.05150 0.04525 0.05025
 ```
 
+*******************************
+### Visualization: histogram plots
+
+[`ggplot2`](http://ggplot2.org) is a plotting system for R, based on the grammar of graphics.
+To create the same histogram using `ggplot`, we used RStan's `as.data.frame` function
+which creates a names column for each parameter or generated quantity variable.
+We then pass this object into the ggplot function which creates a histogram plot:
+```
+library(ggplot2);
+rolls = as.data.frame(fit_8ball, pars=c("ans"))
+p2 = ggplot(data=rolls, aes(rolls$ans)) +
+     geom_histogram(bins=20, colour = "black", fill = "darkgrey")
+p2;
+```
+
+```{r, echo=FALSE, out.width = "25%"}
+library(knitr)
+include_graphics("ex1_p1.png")
+```
+
 ## Exercise 1:  Roll a single fair dice.
 
 * Write a program `gen_d6.stan` to simulate one roll of a fair 6-sided die.
     + Use RStan function `stan` to generate a sample consisting of 4000 draws
     + Get the vector of all 4000 outcomes
     + Bin the outcomes, retrieve observed values for parameter `theta`
-
 
 ## Exercise 2: Load the die.
 
@@ -177,18 +203,17 @@ To access the generated quantity `ans` as a single vector of 4000 outcomes, use 
 The Stan language provides array operations which take arrays as input and produce single output values,
 among these are `min`, `max`, `sum`, and many more (see the Stan Reference Manual, section "Array Operations").
 
-* Generalize program `gen_d6.stan` to `gen_sum_N_rolls_dK.stan` so that it outputs the sum of N rolls of any platonic solid with number of faces K.
+* Generalize program `gen_d6.stan` to `gen_rollsN_facesK.stan` so that it outputs the sum of N rolls of any platonic solid with number of faces K.
     + calculate the expectation of the sum of 4 rolls of a D6
     + calculate the expectation of the sum of 2 rolls of a D12
-    + use R function `hist` to visualize the resulting distribution of sums - compare and constrast
+    + use histograms to visualize the distribution of the sums - compare and constrast
 
 ## Exercise 4: More games
 
-* Write a Stan program `gen_sum_best_3_of_4_d6.stan` which generates the sum of the best 3 out of 4 rolls of a fair, 6-sided die.
+* Write a Stan program `gen_best_3_of_4_d6.stan` which generates the sum of the best 3 out of 4 rolls of a fair, 6-sided die.
 
-* Compare `gen_sum_best_3_of_4_d6.stan` to the result of running `gen_sum_N_rolls_dK.stan` for 3 rolls of a 6-sided die.
+* Compare `gen_best_3_of_4_d6.stan` to the result of running `gen_rollsN_facesK.stan` for 3 rolls of a 6-sided die.
     + Use RStan function `stan` to generate a sample consisting of 4000 draws for each model
     + Get the vector of all 4000 outcomes
-    + use R function `hist` to visualize the resulting distribution of sums - compare and constrast
-    + use R function `hist` to visualize the resulting distribution of sums.
+    + use histograms to visualize the distribution of the sums - compare and constrast
 
