--- a/stan-overview/exercises/1.2/Ex_2_slides.Rmd
+++ b/stan-overview/exercises/1.2/Ex_2_slides.Rmd
@@ -1,18 +1,10 @@
 ---
 title: "MCMC Sampling in High Dimensions"
 output:
-  pdf_document:
-    pandoc_args: --latex-engine=xelatex
-    toc: no
-    toc_depth: 4
-  html_document:
-    toc: no
-    toc_depth: 4
+  ioslides_presentation:
+    widescreen: true
+    smaller: true
 ---
-
-<style type="text/css">
-.table { width: 40%; }
-</style>
 
 ## The Normal Distribution
 
