--- a/stan-overview/stan-overview.tex
+++ b/stan-overview/stan-overview.tex
@@ -3285,16 +3285,14 @@ model {
 %
 \begin{itemize}
 \item Replace sampling with pseudo-random number generation
-{\footnotesize
-\begin{Verbatim}
+\begin{stancode}
    generated quantities {
      vector[N_tilde] y_tilde;
 
      for (n in 1:N_tilde)
-       y_tilde[n] <- normal_rng(x_tilde[n] * beta, sigma);
+       y_tilde[n] = normal_rng(x_tilde[n] * beta, sigma);
    }
-\end{Verbatim}
-}
+\end{stancode}
 \item Must include noise for predictive uncertainty
 \item PRNGs only allowed in generated quantities block
 \begin{subitemize}
@@ -3487,15 +3485,15 @@ data {
 } parameters {
   real<lower=0> eta_sq, inv_rho_sq, sigma_sq;
 } transformed parameters {
-  real<lower=0> rho_sq; rho_sq <- inv(inv_rho_sq);
+  real<lower=0> rho_sq; rho_sq = inv(inv_rho_sq);
 } model {
   matrix[N,N] Sigma;
   for (i in 1:(N-1)) {
     for (j in (i+1):N) {
-      Sigma[i,j] <- eta_sq * exp(-rho_sq * square(x[i] - x[j]));
-      Sigma[j,i] <- Sigma[i,j];
+      Sigma[i,j] = eta_sq * exp(-rho_sq * square(x[i] - x[j]));
+      Sigma[j,i] = Sigma[i,j];
   }}
-  for (k in 1:N) Sigma[k,k] <- eta_sq + sigma_sq;
+  for (k in 1:N) Sigma[k,k] = eta_sq + sigma_sq;
   eta_sq, inv_rho_sq, sigma_sq ~ cauchy(0,5);
   y ~ multi_normal(rep_vector(0,N), Sigma);
 }
@@ -3525,13 +3523,13 @@ data {
         for (n in 1:N) {
           real lp1;  real lp2;
 
-          lp1 <- bernoulli_log(0, lambda)
+          lp1 = bernoulli_log(0, lambda)
                    + normal_log(y[n], mu[1], sigma[1]);
 
-          lp2 <- bernoulli_log(1, lambda)
+          lp2 = bernoulli_log(1, lambda)
                    + normal_log(y[n], mu[2], sigma[2]);
 
-          increment_log_prob(log_sum_exp(lp1,lp2));
+          target += log_sum_exp(lp1,lp2);
 \end{Verbatim}
 }
 \vspace*{2pt}
@@ -3573,19 +3571,15 @@ data {
 }
 \item Code as a function in Stan
 \end{itemize}
-{\footnotesize
-\begin{Verbatim}
-        functions {
-          real[] sho(real t, real[] y, real[] theta,
-                     real[] x_r, int[] x_i) {
-            real dydt[2];
-            dydt[1] <- y[2];
-            dydt[2] <- -y[1] - theta[1] * y[2];
-            return dydt;
-          }
-        }
-\end{Verbatim}
+\begin{stancode}
+functions {
+  real[] sho(real t, real[] y, real[] theta,
+             real[] x_r, int[] x_i) {
+    return { y[2],
+             -y[1] - theta[1] * y[2] };
+  }
 }
+\end{stancode}
 
 
 \sld{Fit Noisy State Measurements}
@@ -3604,9 +3598,8 @@ data {
     model {
       real y_hat[T,2];
       ...priors...
-      y_hat <- integrate_ode(sho, y0, t0, ts, theta, x_r, x_i);
-      for (t in 1:T)
-        y[t] ~ normal(y_hat[t], sigma);
+      y_hat = integrate_ode(sho, y0, t0, ts, theta, x_r, x_i);
+      y ~ normal(y_hat, sigma);
     }
 \end{Verbatim}
 }
@@ -3845,7 +3838,7 @@ model {
 generated quantities {
   int<lower=0, upper=1> is_best[N];
   for (n in 1:N)
-    is_best[n] <- (phi[n] >= max(phi));
+    is_best[n] = (phi[n] >= max(phi));
 }
 \end{stancode}
 \end{itemize}
@@ -3927,9 +3920,9 @@ generated quantities {
   int<lower=1, upper=N> rnk[N];      // rank of player n
   {
     int dsc[N];
-    dsc <- sort_indices_desc(theta);
+    dsc = sort_indices_desc(theta);
     for (n in 1:N)
-      rnk[dsc[n]] <- n;
+      rnk[dsc[n]] = n;
   }
 \end{stancode}
 
@@ -3947,7 +3940,7 @@ generated quantities {
   int<lower=0, upper=1> is_best[N];
   ...
   for (n in 1:N)
-    is_best[n] <- (rnk[n] == 1);  // more efficient
+    is_best[n] = (rnk[n] == 1);  // more efficient
   ...
 \end{stancode}
 
@@ -3969,7 +3962,7 @@ data {
 generated quantities {
   int<lower=0> z[N];  // posterior prediction
   for (n in 1:N)
-    z[n] <- binomial_rng(K_new[n], theta[n]);
+    z[n] = binomial_rng(K_new[n], theta[n]);
 \end{stancode}
 \item Full Bayes accounts for two sources of uncertainty
 \begin{subitemize}
@@ -3993,15 +3986,15 @@ generated quantities {
 generated quantities {
   ...
   for (n in 1:N)
-    y_rep[n] <- binomial_rng(K[n], theta[n]);
+    y_rep[n] = binomial_rng(K[n], theta[n]);
   for (n in 1:N)
-    y_pop_rep[n] <- binomial_rng(K[n],
-                                 beta_rng(phi * kappa,
-                                          (1 - phi) * kappa));
-  min_y_rep <- min(y_rep);
-  sd_y_rep <- sd(to_vector(y_rep));
-  p_min <- (min_y_rep >= min_y);
-  p_sd <- (sd_y_rep >= sd_y);
+    y_pop_rep[n] = binomial_rng(K[n],
+                               beta_rng(phi * kappa,
+                                        (1 - phi) * kappa));
+  min_y_rep = min(y_rep);
+  sd_y_rep = sd(to_vector(y_rep));
+  p_min = (min_y_rep >= min_y);
+  p_sd = (sd_y_rep >= sd_y);
 }
 \end{stancode}
 
@@ -5011,9 +5004,9 @@ is more efficient with sufficient statistics
 \begin{Verbatim}
   {
     real sum_y;  // local variable
-    sum_y <- 0;
+    sum_y = 0;
     for (n in 1:N)
-      sum_y <- a + y[n];   // reassignment
+      sum_y = sum_y + y[n];   // reassignment
     sum_y ~ binomial(N, theta);
   }
 \end{Verbatim}
@@ -5076,20 +5069,17 @@ is more efficient with sufficient statistics
 \item return derivatives ($\partial y / \partial t$) of state w.r.t. time
 \end{subitemize}
 \item Simple harmonic oscillator diff eq
-{\footnotesize
+\begin{stancode}
 \begin{Verbatim}
     real[] sho(real t,         // time
                real[] y,       // system state
                real[] theta,   // params
                real[] x_r,     // real data
                int[] x_i) {    // int data
-      real dydt[2];
-      dydt[1] <- y[2];
-      dydt[2] <- -y[1] - theta[1] * y[2];
-      return dydt;
+      return { y[2],
+               -y[1] - theta[1] * y[2] };
    }
-\end{Verbatim}
-}
+\end{stancode}
 \end{itemize}
 
 
@@ -5100,7 +5090,7 @@ is more efficient with sufficient statistics
 initial time (\code{t0}), desired solution times (\code{ts})
 {\footnotesize
 \begin{Verbatim}
-  mu_y <- integrate_ode(sho, y0, t0, ts, theta, x_r, x_i);
+  mu_y = integrate_ode(sho, y0, t0, ts, theta, x_r, x_i);
 \end{Verbatim}
 }
 \item Use noisy measurements of $y$ to estimate $\theta$
