--- a/stan-overview/exercises/1.1/slides.Rmd
+++ b/stan-overview/exercises/1.1/slides.Rmd
@@ -5,19 +5,16 @@ output:
     widescreen: true
 ---
 
-```{r setup, include=FALSE, cache=T}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, comment="")
 height_data = read.csv("heights.csv")
 height_data = height_data[height_data$age >= 18, ]
 hdata = height_data
 library(rstan)
 library(shinystan)
-
-library("rstanarm")
 library("ggplot2")
-posterior <- as.matrix(stan_glm(mpg ~ ., data = mtcars))
+set.seed(1234)
 ```
-
 ## Modeling heights in a population
 The !Kung San are the most famous foraging population of the 20th century, mostly because they have the most detailed quantitative studies conducted by anthropologists like Nancy Howell in the late 1960s.
 
@@ -48,10 +45,10 @@ rnorm(1, mean(height_data$height), sd(height_data$height))
 
 ## Bayesian ways to summarize a distribution
 ```{r, message=F, warning=F, error=F, cache=T}
-plot_title <- ggtitle("Posterior distributions",
+plot_title <- ggtitle("Height and weight distributions",
                       "with medians and 80% intervals")
-mcmc_areas(posterior,
-           pars = c("cyl", "drat", "am", "wt"),
+mcmc_areas(height_data,
+           pars = c("height", "weight"),
            prob = 0.8) + plot_title
 ```
 
